tests/policy/attestor-policy.yaml
# Project-wide policy for Container Analysis Attestations
name: projects/s3cme1/policy
defaultAdmissionRule:
  enforcementMode: ENFORCED_BLOCK_AND_AUDIT_LOG
  evaluationMode: REQUIRE_ATTESTATION
  requireAttestationsBy:
    - projects/s3cme1/attestors/sbom-attestor
admissionWhitelistPatterns:
- namePattern: us.gcr.io/google-containers/**
- namePattern: gcr.io/google_containers/**
- namePattern: gcr.io/stackdriver-agents/**
- namePattern: gke.gcr.io/**
