tests/policy/sbom-attestation-policy-template.yaml
apiVersion: policy.sigstore.dev/v1alpha1
kind: ClusterImagePolicy
metadata:
  name: artomator-sbom-attestation
spec:
  images:
  - glob: "**"
  authorities:
  - name: signer-key
    key:
      kms: KEY_PATH
    ctlog:
      url: https://rekor.sigstore.dev
    attestations:
    - name: must-have-spdxjson-sbom
      predicateType: spdxjson
      policy:
        type: cue
        data: |
          predicateType: "https://spdx.dev/Document"
    - name: must-have-spdx-sbom
      predicateType: spdx
      policy:
        type: cue
        data: |
          predicateType: "https://spdx.dev/Document"
    - name: must-have-cyclonedx-sbom
      predicateType: cyclonedx
      policy:
        type: cue
        data: |
          predicateType: "https://cyclonedx.org/schema"
    # - name: must-have-culn-report
    #   predicateType: vuln
    #   policy:
    #     type: cue
    #     data: |
    #       predicateType: "cosign.sigstore.dev/attestation/vuln/v1"
