tests/policy/sbom-attestation-policy.yaml
apiVersion: policy.sigstore.dev/v1alpha1
kind: ClusterImagePolicy
metadata:
  name: artomator-attestation-sbom-spdxjson
spec:
  images:
  - glob: "*.pkg.dev/cloudy-demos/**"
  authorities:
  - name: signer-key
    key:
      kms: gcpkms://projects/cloudy-demos/locations/us-west1/keyRings/artomator/cryptoKeys/artomator-signer/cryptoKeyVersions/1
    ctlog:
      url: https://rekor.sigstore.dev
    attestations:
    - name: must-have-spdx-sbom
      predicateType: spdx
      policy:
        type: cue
        data: |
          predicateType: "https://spdx.dev/Document"
    - name: must-have-culn-report
      predicateType: vuln
      policy:
        type: cue
        data: |
          predicateType: "cosign.sigstore.dev/attestation/vuln/v1"
